--- a/deployment/v3/cluster/aws/cluster.config.sample
+++ b/deployment/v3/cluster/aws/cluster.config.sample
@@ -5,6 +5,7 @@ kind: ClusterConfig
 metadata:
   name: v3box1
   region: ap-south-1
+  version: "1.19"
 
 managedNodeGroups:
   - name: t3a-2xlarge-64gb
