--- a/deployment/v3/logging/es_values.yaml
+++ b/deployment/v3/logging/es_values.yaml
@@ -1,7 +1,9 @@
 master:
   persistence:
     enabled: false
+    storageClass: null
 data:
   persistence:
     enabled: false
+    storageClass: null
 
