[MOSIP-12878] Fixing microsecs for ida regprc connectors

--- a/deployment/v3/reporting/values-init.yaml
+++ b/deployment/v3/reporting/values-init.yaml
@@ -19,3 +19,7 @@ connectors_enabled:
   ida_auth_transaction: true
   regprc_registration: true
   regprc_registration_list: true
+
+kibana_enabled:
+  prereg: true
+  prereg_operations: false
