[ /MOSIP-17071 ] updated runsql.sh script to run ddl or dml files

--- a/deployment/sandbox-v2/utils/db/db.properties
+++ b/deployment/sandbox-v2/utils/db/db.properties
@@ -3,5 +3,9 @@ DB_PORT=
 DB_USER=
 DBUSER_PWD=
 MOSIP_DB_NAME=
-SQL_FILE_PATH=
+TABLE_NAME=
+DML_FILE_PATH=
+DDL_FILE_PATH=
 LOG_PATH=
+DML_FLAG=0
+DDL_FLAG=0
