[MOSIP-12878] Fixing errors in reporting-init docker and renaming kibana ndjsons

--- a/deployment/v3/reporting/values-init.yaml
+++ b/deployment/v3/reporting/values-init.yaml
@@ -6,6 +6,7 @@
 #   # if this is not false it will directly take pass from this variable, else it will take from db_pass_secretref
 #   db_pass_direct:
 #   es_url:
+#   kibana_url:
 
 connectors_enabled:
   master_doc_type: true
