--- a/deployment/v3/reporting/values-init.yaml
+++ b/deployment/v3/reporting/values-init.yaml
@@ -8,19 +8,24 @@
 #   es_url:
 #   kibana_url:
 
-connectors_enabled:
-  master_doc_type: true
-  master_registration_center: true
-  audit_app_audit_log: true
-  prereg_applicant_demographic: true
-  prereg_applicant_document: true
-  prereg_otp_transaction: true
-  prereg_reg_appointment: true
-  prereg_reg_available_slot: true
-  ida_auth_transaction: true
-  regprc_registration: true
-  regprc_registration_list: true
+debezium_connectors:
 
-kibana_enabled:
-  prereg: true
-  prereg_operations: false
+  enabled: true
+  delay_between_connectors: "20s"
+  dbs:
+  - name: "mosip_master"
+    tables: "master.doc_type,master.registration_center"
+  - name: "mosip_audit"
+    tables: "audit.app_audit_log"
+  - name: "mosip_prereg"
+    tables: "prereg.applicant_demographic,prereg.applicant_document,prereg.reg_appointment,prereg.reg_available_slot,prereg.otp_transaction"
+  - name: "mosip_ida"
+    tables: "ida.auth_transaction"
+  - name: "mosip_regprc"
+    tables: "regprc.registration,regprc.registration_list"
+
+
+es_kafka_connectors:
+
+  enabled: true
+  delay_between_connectors: "10s"
