[MOSIP-12878] Installation name added for reporting reference.

--- a/deployment/v3/cluster/global_configmap.yaml.sample
+++ b/deployment/v3/cluster/global_configmap.yaml.sample
@@ -15,6 +15,7 @@ metadata:
   name: global
   namespace: default
 data:
+  installation-name: sandbox
   mosip-api-host: api.sandbox.xyz.net
   mosip-api-internal-host: api-internal.sandbox.xyz.net
   mosip-prereg-host: prereg.sandbox.xyz.net
