[MOSIP-17679] Changed kibana to install with elasticsearch

--- a/deployment/v3/logging/chart/istio-addons/templates/vs.yaml
+++ b/deployment/v3/logging/chart/istio-addons/templates/vs.yaml
@@ -8,10 +8,7 @@ spec:
   gateways:
     - kibana
   http:
-  - match:
-      - uri:
-          prefix: "/"
-    route:
+  - route:
     - destination:
         host: {{ .Values.installName }}
         port:
