--- a/deployment/v3/utils/onboard/partner/requirements.txt
+++ b/deployment/v3/utils/onboard/partner/requirements.txt
@@ -1,3 +1,15 @@
-requests
-cryptography
-pandas
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.6
+cryptography==35.0.0
+idna==3.2
+numpy==1.21.2
+pandas==1.3.3
+pycparser==2.20
+pyOpenSSL==21.0.0
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
+six==1.16.0
+urllib3==1.26.7
+
