--- a/deployment/v3/reporting/values-init.yaml
+++ b/deployment/v3/reporting/values-init.yaml
@@ -1,12 +1,12 @@
 # base:
-#   # db_prefix:
-#   # db_user:
-#   # db_hostname:
-#   # db_port:
+#   db_prefix:
+#   db_user:
+#   db_hostname:
+#   db_port:
 #   # if this is not false it will directly take pass from this variable, else it will take from db_pass_secretref
-#   # db_pass_direct:
-#   # es_url:
-#   # kibana_url:
+#   db_pass_direct:
+#   es_url:
+#   kibana_url:
 
 debezium_connectors:
   enabled: true
@@ -17,7 +17,7 @@ debezium_connectors:
   - name: "mosip_audit"
     tables: "audit.app_audit_log"
   - name: "mosip_prereg"
-    tables: "prereg.applicant_demographic,prereg.applicant_document,prereg.reg_appointment,prereg.reg_available_slot,prereg.otp_transaction"
+    tables: "prereg.applicant_demographic,prereg.applicant_demographic_consumed,prereg.applicant_document,prereg.applicant_document_consumed,prereg.reg_appointment,prereg.reg_appointment_consumed,prereg.reg_available_slot,prereg.otp_transaction"
   - name: "mosip_ida"
     tables: "ida.auth_transaction"
   - name: "mosip_regprc"
@@ -29,3 +29,4 @@ debezium_connectors:
 es_kafka_connectors:
   enabled: true
   delay_between_connectors: "10s"
+  # existingConfigMap:
