--- a/deployment/sandbox-v2/roles/packages/helm-cli/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/packages/helm-cli/tasks/main.yml
@@ -30,3 +30,6 @@
 
 - name: Add grafana repo
   shell: '{{helm_cli_path}}/helm repo add grafana https://grafana.github.io/helm-charts'  
+
+- name: Add provectus kafka-ui repo
+  shell: '{{helm_cli_path}}/helm repo add kafka-ui https://provectus.github.io/kafka-ui
