--- a/deployment/sandbox-v2/roles/k8scluster/kubernetes/node/tasks/join.yml
+++ b/deployment/sandbox-v2/roles/k8scluster/kubernetes/node/tasks/join.yml
@@ -9,6 +9,7 @@
   shell: |
     kubeadm join --token {{ token }} \
                 --discovery-token-unsafe-skip-ca-verification \
+                --ignore-preflight-errors = all \
                 {{ kubemaster_ip }}:6443
   register: join_cluster
   notify:
