--- a/deployment/sandbox-v2/helm/charts/regproc/templates/group4-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/group4-dep.yaml
@@ -55,22 +55,26 @@ spec:
           containerPort: {{ .Values.services.demo.ports.eventbusPort }}
         - name: demo-vt
           containerPort: {{ .Values.services.demo.ports.containerPort }}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.group4.healthUrl }}
             port: {{ .Values.services.group4.ports.containerPort }}
           periodSeconds: {{ .Values.probe.period }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         livenessProbe:
           httpGet:
             path: {{ .Values.services.group4.healthUrl }}
             port: {{ .Values.services.group4.ports.containerPort }}
           periodSeconds: {{ .Values.probe.livenessPeriod }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         startupProbe:
           httpGet:
             path: {{ .Values.services.group4.healthUrl }}
             port: {{ .Values.services.group4.ports.containerPort }}
           failureThreshold: {{ .Values.probe.failureThreshold }}
           periodSeconds: {{ .Values.probe.startupPeriod }}
-
+          timeoutSeconds: {{ .Values.probe.timeout }}
+          initialDelaySeconds: {{ .Values.probe.initialDelaySeconds }}
