--- a/deployment/sandbox-v2/helm/charts/regproc/templates/workflow-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/workflow-dep.yaml
@@ -57,21 +57,26 @@ spec:
           containerPort: {{ .Values.services.workflow.ports.workflowActionEventBusPort }}
         - name: workflowact-sp
           containerPort: {{ .Values.services.workflow.ports.workflowActionServerPort }}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.workflow.healthUrl }}
-            port: {{ .Values.services.workflow.ports.eventbusPort }}
+            port: {{ .Values.services.workflow.ports.serverPort }}
           periodSeconds: {{ .Values.probe.period }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         livenessProbe:
           httpGet:
             path: {{ .Values.services.workflow.healthUrl }}
-            port: {{ .Values.services.workflow.ports.eventbusPort }}
+            port: {{ .Values.services.workflow.ports.serverPort }}
           periodSeconds: {{ .Values.probe.livenessPeriod }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         startupProbe:
           httpGet:
             path: {{ .Values.services.workflow.healthUrl }}
-            port: {{ .Values.services.workflow.ports.eventbusPort }}
+            port: {{ .Values.services.workflow.ports.serverPort }}
           failureThreshold: {{ .Values.probe.failureThreshold }}
           periodSeconds: {{ .Values.probe.startupPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+          initialDelaySeconds: {{ .Values.probe.initialDelaySeconds }}
