--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-dep.yaml
@@ -34,7 +34,30 @@ spec:
           value: {{ $podconfig.java_opts }}
         ports: 
         - containerPort: {{ .Values.services.pktserver.ports.containerPort }}
-        #TODO: Put health check
+
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.services.pktserver.healthUrl }}
+            port: {{ .Values.services.pktserver.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.pktserver.healthUrl }}
+            port: {{ .Values.services.pktserver.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.pktserver.healthUrl }}
+            port: {{ .Values.services.pktserver.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+          initialDelaySeconds: {{ .Values.probe.initialDelaySeconds }}
+
         volumeMounts:
         - name: landing-zone
           mountPath: /home/ftp1/LANDING_ZONE  # Hardcoded in Dockerfile
