--- a/deployment/sandbox-v2/helm/charts/regproc/templates/camel-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/camel-dep.yaml
@@ -52,21 +52,26 @@ spec:
           containerPort: {{ .Values.services.camel.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.camel.ports.containerPort }}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.camel.healthUrl }}
             port: {{ .Values.services.camel.ports.containerPort }}
           periodSeconds: {{ .Values.probe.period }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         livenessProbe:
           httpGet:
             path: {{ .Values.services.camel.healthUrl }}
             port: {{ .Values.services.camel.ports.containerPort }}
           periodSeconds: {{ .Values.probe.livenessPeriod }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         startupProbe:
           httpGet:
             path: {{ .Values.services.camel.healthUrl }}
             port: {{ .Values.services.camel.ports.containerPort }}
           failureThreshold: {{ .Values.probe.failureThreshold }}
           periodSeconds: {{ .Values.probe.startupPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+          initialDelaySeconds: {{ .Values.probe.initialDelaySeconds}}
