--- a/deployment/sandbox-v2/helm/charts/regproc/templates/group3-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/group3-dep.yaml
@@ -63,22 +63,26 @@ spec:
           containerPort: {{ .Values.services.manual.ports.eventbusPort }}
         - name: manual-vt
           containerPort: {{ .Values.services.manual.ports.containerPort }}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.group3.healthUrl }}
             port: {{ .Values.services.group3.ports.containerPort }}
           periodSeconds: {{ .Values.probe.period }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         livenessProbe:
           httpGet:
             path: {{ .Values.services.group3.healthUrl }}
             port: {{ .Values.services.group3.ports.containerPort }}
           periodSeconds: {{ .Values.probe.livenessPeriod }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         startupProbe:
           httpGet:
             path: {{ .Values.services.group3.healthUrl }}
             port: {{ .Values.services.group3.ports.containerPort }}
           failureThreshold: {{ .Values.probe.failureThreshold }}
           periodSeconds: {{ .Values.probe.startupPeriod }}
-
+          timeoutSeconds: {{ .Values.probe.timeout }}
+          initialDelaySeconds: {{ .Values.probe.initialDelaySeconds }}
