--- a/deployment/sandbox-v2/helm/charts/regproc/templates/group6-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/group6-dep.yaml
@@ -58,17 +58,20 @@ spec:
           containerPort: {{ .Values.services.uploader.ports.eventbusPort }}
         - name: upd-verticle
           containerPort: {{ .Values.services.uploader.ports.containerPort }}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.group6.healthUrl }}
             port: {{ .Values.services.group6.ports.containerPort }}
           periodSeconds: {{ .Values.probe.period }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         livenessProbe:
           httpGet:
             path: {{ .Values.services.group6.healthUrl }}
             port: {{ .Values.services.group6.ports.containerPort }}
           periodSeconds: {{ .Values.probe.livenessPeriod }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
           timeoutSeconds: {{ .Values.probe.timeout }}
         startupProbe:
           httpGet:
@@ -76,4 +79,5 @@ spec:
             port: {{ .Values.services.group6.ports.containerPort }}
           failureThreshold: {{ .Values.probe.failureThreshold }}
           periodSeconds: {{ .Values.probe.startupPeriod }}
-
+          timeoutSeconds: {{ .Values.probe.timeout }}
+          initialDelaySeconds: {{ .Values.probe.initialDelaySeconds }}
