--- a/deployment/sandbox-v2/helm/charts/regproc/templates/notification-service-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/notification-service-dep.yaml
@@ -46,22 +46,27 @@ spec:
         ports:
         - name: server-port
           containerPort: {{ .Values.services.notificationService.ports.containerPort }}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.notificationService.healthUrl }}
             port: {{ .Values.services.notificationService.ports.containerPort }}
           periodSeconds: {{ .Values.probe.period }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         livenessProbe:
           httpGet:
             path: {{ .Values.services.notificationService.healthUrl }}
             port: {{ .Values.services.notificationService.ports.containerPort }}
           periodSeconds: {{ .Values.probe.livenessPeriod }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
         startupProbe:
           httpGet:
             path: {{ .Values.services.notificationService.healthUrl }}
             port: {{ .Values.services.notificationService.ports.containerPort }}
           failureThreshold: {{ .Values.probe.failureThreshold }}
           periodSeconds: {{ .Values.probe.startupPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+          initialDelaySeconds: {{ .Values.probe.initialDelaySeconds }}
 
